<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_retry">Retry</string>
    <string name="dialog_btn_delete">Delete</string>
    <string name="dialog_btn_save">Save</string>
    <string name="dialog_btn_done">Done</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_switch">Switch</string>
    <string name="dialog_btn_send">Send</string>
    <string name="dialog_btn_ringout">RingOut</string>
    <string name="loginscreen_setup_dialog_title">Express Setup is Incomplete</string>
    <string name="loginscreen_setup_dialog_yes">Complete Setup Now</string>
    <string name="loginscreen_setup_dialog_no">Skip Setup</string>
    <string name="loginscreen_setup_dialog_later">Decide Later</string>
    <string name="loginscreen_trial_dlg_title">Upgrade your service</string>
    <string name="loginscreen_trial_dlg_upgrade">Upgrade Now</string>
    <string name="login_text">Sign In</string>
    <string name="sso_login_link">Single Sign On</string>
    <string name="signup_text_first_text_part">Don\'t have an account? </string>
    <string name="signup_text_second_text_part"> Sign Up</string>
    <string name="loginscreen_passwordrecovery_link">Forgot Password?</string>
    <string name="loginscreen_no_app_permission_dialog_title">No Permission</string>
    <string name="loginscreen_no_app_permission_dialog_msg">Sorry, you don\'t have sufficient permission to use this app. Please contact your account administrator.</string>
    <string name="tab_name_conference">Conferencing</string>
    <string name="tab_name_favorites">Favorites</string>
    <string name="tab_name_contacts">Contacts</string>
    <string name="tab_name_zoom_video">Meetings</string>
    <string name="tab_name_glip">Glip</string>
    <string name="tab_name_calendar">Join Now</string>
    <string name="tab_name_more">More</string>
    <string name="tab_name_park_locations">Park Locations</string>
    <string name="topleftback">&lt; Back</string>
    <string name="ringout_context_menu_title">Edit</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="ringout_end_call_text">End</string>
    <string name="ringout_status_top_label_text">Now calling…</string>
    <string name="ringout_status_mid_hint_text_3line">The phone you assigned in Settings \nwill ring now. Please pick up to complete \nthe connection.</string>
    <string name="ringout_alert_title_call_failed">Call Failed</string>
    <string name="ringout_alert_msg_connection_error">Cannot place the call since there is no connection to server. Please try again later.</string>
    <string name="ringout_alert_msg_call_fail">An error occurred while attempting to complete your request. Please try again later.</string>
    <string name="ringout_alert_msg_call_fail_try_again">An error occurred while attempting to complete your request. Would you like to try again?</string>
    <string name="ringout_alert_title_invalid_callerID">Caller ID Not Available</string>
    <string name="ringout_alert_msg_invalid_callerID_multiple">The Caller ID you selected is not available now, please choose another one and try again.</string>
    <string name="ringout_alert_msg_invalid_callerID_one">The Caller ID you selected is not available now, please try again.</string>
    <string name="ringout_alert_number_contact_and_favorite">This number is already in your contacts and favorites list.</string>
    <string name="ringout_mode_alert_login_using_direct_number">Please log in using your Direct Number to use this RingOut mode.</string>
    <string name="ringout_alert_need_voip">Directory Enquiry calls are not allowed in RingOut Mode. Please enable Outbound VoIP in the app settings to make such calls.</string>
    <string name="ringout_alert_need_voip_100">This call is not allowed in RingOut Mode. Please enable Outbound VoIP in the app settings to make such calls.</string>
    <string name="ringout_alert_unsupported_number">Calls to this service are not supported. Please dial the number directly from your landline or cell phone.</string>
    <string name="ringout_status_call_initiated">Call initiated</string>
    <string name="ringout_callState_csError">Error occurred while calling party.</string>
    <string name="ringout_callState_csSuccess">Call has been completed.</string>
    <string name="ringout_userStatus_eInProgress">The phone you assigned in Settings will ring now. Please pick up to complete the connection.</string>
    <string name="ringout_userStatus_eBusy">Your phone line is busy. Please try again.</string>
    <string name="ringout_userStatus_eNoAnswer">Your phone does not answer. Please try again.</string>
    <string name="ringout_userStatus_eRejected">You have rejected the call.</string>
    <string name="ringout_userStatus_eGenericError">Error occurred calling your current location.</string>
    <string name="ringout_userStatus_eFinished">Call has been completed.</string>
    <string name="ringout_userStatus_eInternationalDisabled">International calls are disabled.</string>
    <string name="ringout_userStatus_eDestinationBlocked">Destination number is prohibited.</string>
    <string name="ringout_userStatus_eNotEnoughFunds">Too low  balance on the account.</string>
    <string name="ringout_userStatus_eCallerIDDisabled">Caller ID not available, please try again later.</string>
    <string name="ringout_partyStatus_eInProgress">First party connected.</string>
    <string name="ringout_partyStatus_eBusy">First party connected. Your party\'s phone is busy. Please try again.</string>
    <string name="ringout_partyStatus_eNoAnswer">First party connected. There\'s no answer from your party\'s phone. Please try again.</string>
    <string name="ringout_partyStatus_eRejected">First party connected. Your party has rejected the call.</string>
    <string name="ringout_partyStatus_eGenericError">Error occurred while calling party.</string>
    <string name="ringout_partyStatus_eInternationalDisabled">International calls are disabled.</string>
    <string name="ringout_partyStatus_eDestinationBlocked">Destination number is prohibited.</string>
    <string name="ringout_partyStatus_eNotEnoughFunds">Low balance on the account.</string>
    <string name="ringout_partyStatus_eFinished">Call has been completed.</string>
    <string name="ringout_partyStatus_eSuccess">Both parties are connected.</string>
    <string name="ringout_from_caller_id">From: </string>
    <string name="voip_call_screen_btn_speaker">Speaker</string>
    <string name="voip_call_screen_btn_bluetooth_device">Bluetooth Device</string>
    <string name="voip_call_screen_btn_defalut_headset">Default/Headset</string>
    <string name="voip_call_screen_dialog_title">Choose the audio source you would like to listen from.</string>
    <string name="generic_network_error">An error occurred while attempting to complete your request (network error). Please try again later.</string>
    <string name="airplane_network_error">An error occurred while attempting to complete your request (airplane mode). Please try again later.</string>
    <string name="network_not_available">Network is not available. Please try again later.</string>
    <string name="error_code_alert_title">Error</string>
    <string name="error_code_alert_invalid_token">Automatic Logout</string>
    <string name="error_code_alert_no_connection_title">No Connection</string>
    <string name="error_code_ivn_login_title">Invalid Login Credential</string>
    <string name="error_code_ivn_login_text">Log in with your International Virtual Number is not allowed, please use another credential to log in.</string>
    <string name="calllog_tab_all_title">All Calls</string>
    <string name="calllog_tab_missed_title">Missed Calls</string>
    <string name="calllog_item_view_error">Call log is updating, please try again later.</string>
    <string name="calllog_menu_Call">Call</string>
    <string name="calllog_menu_View">View</string>
    <string name="calllog_menu_add_to_contacts_new">Create New Contact</string>
    <string name="calllog_menu_add_to_contacts_existing">Add to Existing Contact</string>
    <string name="calllog_first_create_contact_prompt">Create a contact before adding to favorites.</string>
    <string name="calllog_menu_add_to_faworites">Add to Favorites</string>
    <string name="calllog_menu_remove_from_faworites">Remove from Favorites</string>
    <string name="recentCalls_empty">No Call History</string>
    <string name="calllog_no_results_found">No Search Result</string>
    <string name="calllog_label_175_unknown">Unknown</string>
    <string name="calllog_label_176_in_progress">In Progress</string>
    <string name="calllog_label_177_missed">Missed</string>
    <string name="calllog_label_178_accept_call">Call accepted</string>
    <string name="calllog_label_179_voicemail">Voicemail</string>
    <string name="calllog_label_180_reject">Rejected</string>
    <string name="calllog_label_182_reply">Reply</string>
    <string name="calllog_label_183_fax_received">Received</string>
    <string name="calllog_label_184_fax_receive_error">Receive Error</string>
    <string name="calllog_label_185_fax_on_demand">Fax On Demand</string>
    <string name="calllog_label_186_fax_partial_receive">Partial Receive</string>
    <string name="calllog_label_187_blocked">Blocked</string>
    <string name="calllog_label_188_connected">Call connected</string>
    <string name="calllog_label_189_no_answer">No Answer</string>
    <string name="calllog_label_190_international_disabled">International Disabled</string>
    <string name="calllog_label_191_busy">Busy</string>
    <string name="calllog_label_192_fax_send_error">Send Error</string>
    <string name="calllog_label_193_fax_sent">Sent</string>
    <string name="calllog_label_194_no_fax_machine">No fax machine</string>
    <string name="calllog_label_203_suspended_account">Account Suspended</string>
    <string name="calllog_label_204_call_failed">Call Failed</string>
    <string name="calllog_label_205_call_failure">Call Failure</string>
    <string name="calllog_label_206_internal_error">Internal Error</string>
    <string name="calllog_label_207_ip_phone_offline">IP Phone Offline</string>
    <string name="calllog_label_208_no_calling_credit">No Calling Credit</string>
    <string name="new_contact">New Contact</string>
    <string name="middle_name_hint">Middle Name</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="nick_name_hint">Nickname</string>
    <string name="job_title_hint">Job Title</string>
    <string name="company_hint">Company</string>
    <string name="notes_hint">Notes</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="permission_denied_alert_title_contacts">No Access to Contacts</string>
    <string name="permission_denied_alert_content_contacts">%s doesn\'t have access to your contacts. If you want to see your contacts, go to Permissions and turn it on.</string>
    <string name="turn_on_permission">Turn On</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="event_name">Event Name</string>
    <string name="calendar_sunday">Sun.</string>
    <string name="calendar_monday">Mon.</string>
    <string name="calendar_tuesday">Tue.</string>
    <string name="calendar_wednesday">Wed.</string>
    <string name="calendar_thursday">Thur.</string>
    <string name="calendar_friday">Fri.</string>
    <string name="calendar_saturday">Sat.</string>
    <string name="create_new_calendar">New Calendar</string>
    <string name="save_calendar">Save</string>
</resources>