<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorMain"
    android:clickable="true"
    android:id="@+id/root_view"
    android:orientation="vertical">

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_main"
        android:layout_centerInParent="true"
        android:text="Main"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_contacts"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_main"
        android:text="@string/tab_name_contacts"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_favorites"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btn_contacts"
        android:text="@string/tab_name_favorites"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/btn_calendar"
        android:layout_below="@id/btn_favorites"
        android:layout_centerHorizontal="true"
        android:text="@string/tab_name_calendar"/>



</RelativeLayout>
