<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:rcm="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bgColorMain">

    <com.example.nickgao.utils.widget.HeaderViewBase
        android:id="@+id/create_new_message_top"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/header_hight"
        android:background="@drawable/bg_action_bar_blue"
        rcm:header_header_text="@string/create_new_calendar"
        rcm:header_left_button_drawable="@drawable/ic_action_back"
        rcm:header_right_button_label="@string/save_calendar"/>

    <EditText
        android:id="@+id/event_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:textColor="@color/text_color_main"
        android:textSize="@dimen/font_size_large"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Location"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:singleLine="true"
        android:textColor="@color/text_color_main"
        android:textSize="@dimen/font_size_large"
        android:layout_marginTop="16dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:stretchColumns="1"
        android:paddingRight="10dp"
        android:paddingLeft="10dp">

        <TableRow
            android:id="@+id/start_date_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_color_main"
                android:textSize="@dimen/font_size_medium"
                android:text="Start Date"/>

            <TextView
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_color_main"
                android:textSize="@dimen/font_size_medium"
                android:text="2015-08-01 12:12:12"/>
        </TableRow>

        <TableRow
            android:id="@+id/end_date_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_color_main"
                android:textSize="@dimen/font_size_medium"
                android:text="End Date"/>

            <TextView
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:singleLine="true"
                android:textColor="@color/text_color_main"
                android:textSize="@dimen/font_size_medium"
                android:text="2015-08-01 12:12:12"/>
        </TableRow>
    </TableLayout>


</LinearLayout>
